--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image" href="./assets/icons/nyoklapor-icon.png" />
+    <link rel="icon" type="image" href="./assets/homepage/logo1.png" />
 
     <title>NyokLapor</title>
 </head>
 
-<body class="bg-section1 bg-opacity-5">
+<body class="bg-bghome bg-opacity-5">
     <header>
         <nav-bar></nav-bar>
     </header>
@@ -18,9 +18,11 @@
 
     </main>
 
-   <footer></footer>
+    <foot-bar></foot-bar>
+
     <!-- ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+
 </body>
 
 </html>
